--- a/package.json
+++ b/package.json
@@ -30,8 +30,11 @@
     "@angular/platform-browser-dynamic": "8.0.0",
     "@angular/platform-server": "8.0.0",
     "@angular/router": "8.0.0",
+    "@ng-bootstrap/ng-bootstrap": "^5.1.4",
+    "@types/axios": "^0.14.0",
     "ajv": "6.10.0",
     "arrive": "2.4.1",
+    "axios": "^0.19.0",
     "bootstrap": "4.3.1",
     "bootstrap-material-design": "4.1.2",
     "bootstrap-notify": "3.1.3",
@@ -42,6 +45,9 @@
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
     "jquery": "3.4.1",
+    "lodash": "^4.17.15",
+    "mobx": "^5.14.2",
+    "mobx-angular": "^3.0.3",
     "moment": "2.24.0",
     "perfect-scrollbar": "1.1.0",
     "popper.js": "1.15.0",
@@ -57,7 +63,6 @@
     "@angular/language-service": "8.0.0",
     "@types/bootstrap": "4.3.0",
     "@types/chartist": "0.9.46",
-    "@types/googlemaps": "3.36.4",
     "@types/jasmine": "3.3.13",
     "@types/jquery": "3.3.29",
     "@types/node": "12.0.7",
