--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "@ng-bootstrap/ng-bootstrap": "^5.1.4",
     "@types/axios": "^0.14.0",
     "ajv": "6.10.0",
+    "angular-cli-ghpages": "^0.6.0",
     "arrive": "2.4.1",
     "axios": "^0.19.0",
     "bootstrap": "4.3.1",
