--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "chartist": "0.11.2",
     "classlist.js": "1.1.20150312",
     "core-js": "3.1.3",
+    "default-passive-events": "^1.0.10",
     "express": "4.17.1",
     "googleapis": "40.0.0",
     "hammerjs": "2.0.8",
